--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/SaleStatistics.csproj
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/SaleStatistics.csproj
@@ -201,6 +201,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\CustomRoleAndMembership.mdf" />
+    <Content Include="App_Data\CustomRoleAndMembership_log.ldf">
+      <DependentUpon>CustomRoleAndMembership.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -313,9 +317,7 @@
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
