--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
@@ -29,11 +29,12 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
 
-    <!--https://metanit.com/sharp/mvc/11.3.php   READ-->
+    <!--https://metanit.com/sharp/mvc/11.3.php   READ
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-
+    
+-->
   </system.web>
 
 
