--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
@@ -103,23 +103,9 @@
 
   <connectionStrings>
 
-    <add name="DataBaseModelContainer"
-         connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;
-         provider=System.Data.SqlClient;
-         provider connection string=&quot;
-         data source=USER-\MYSQL;
-         initial catalog=ManagerBase;
-         integrated security=True;
-         MultipleActiveResultSets=True;
-         App=EntityFramework&quot;"
-         providerName="System.Data.EntityClient" />
+    <add name="DataBaseModelContainer" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;          provider=System.Data.SqlClient;          provider connection string=&quot;          data source=USER-\MYSQL;          initial catalog=ManagerBase;          integrated security=True;          MultipleActiveResultSets=True;          App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
-    <add name="DefaultConnection"
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
-         AttachDbFilename=|DataDirectory|\aspnet-SaleStatistics-20170615102409.mdf;
-         Initial Catalog=aspnet-SaleStatistics-20170615102409;
-         Integrated Security=true"
-         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;          AttachDbFilename=|DataDirectory|\aspnet-SaleStatistics-20170615102409.mdf;          Initial Catalog=aspnet-SaleStatistics-20170615102409;          Integrated Security=true" providerName="System.Data.SqlClient" />
          <!-- Integrated Security=SSPI"-->
          
     
