--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
@@ -35,4 +35,5 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net452" />
 </packages>
