--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
@@ -27,10 +27,10 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
 
-    <!--https://metanit.com/sharp/mvc/11.3.php
+    <!--https://metanit.com/sharp/mvc/11.3.php-->
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
-    </authentication>-->
+    </authentication>
 
   </system.web>
 
