--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/SaleStatistics.csproj
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/SaleStatistics.csproj
@@ -192,12 +192,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DiagramController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\ChartModel.cs" />
     <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\SaleInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -317,6 +319,7 @@
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Home\ManagersChart.cshtml" />
+    <Content Include="Views\Diagram\GetDiagram.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
